[gd_scene load_steps=2 format=3 uid="uid://dcih1v7r4ul8l"]

[ext_resource type="Script" path="res://Scenes/MainMenu/MainMenuHandler.gd" id="1_pt1qs"]

[node name="MainMenu" type="PanelContainer"]
size_flags_horizontal = 4
script = ExtResource("1_pt1qs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CHIP STEALER 9000"

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="isSeagull?" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Seagull"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/isSeagull?" to="." method="_on_is_seagull_toggled"]
